--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <a href="/storage.html">Хранилище</a>
             <a href="/subscription.html">Подписка</a>
             <a href="/login.html">Войти</a>
-            <a href="/logout.html">Выйти</a>
+            <a href="/logout">Выйти</a>
         </nav>
     </header>
 
@@ -30,10 +30,12 @@
             </div>
 
             <form>
-                <input type="text" name="login" placeholder="Логин">
-                <input type="password" name="password" placeholder="Пароль">
-                <input type="submit" name="submit-button" value="Войти">
+                <input class="input" type="text" name="login" placeholder="Логин">
+                <input class="input" type="password" name="password" placeholder="Пароль">
+                <input class="submit-button" type="submit" name="submit-button" value="Войти">
             </form>
+
+            <a class="switch-to-register" href="/register.html">Зарегистрироваться</a>
         </div>
     </main>
 </body>
