--- a/subscription.html
+++ b/subscription.html
@@ -19,7 +19,7 @@
             <a href="/storage.html">Хранилище</a>
             <a href="/subscription.html">Подписка</a>
             <a href="/login.html">Войти</a>
-            <a href="/logout.html">Выйти</a>
+            <a href="/logout">Выйти</a>
         </nav>
     </header>
 
