--- a/admin.html
+++ b/admin.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WaterCloud</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
+    <title>Админ панель | WaterCloud</title>
 </head>
 <body>
     <header>
@@ -24,7 +22,7 @@
     </header>
 
     <main>
-        <h2>WaterCloud - уникальная база данных с элитарной системой пользователей!</h2>
+        //
     </main>
 </body>
 </html>
