--- a/register.html
+++ b/register.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Зарегистрироваться | WaterCloud</title>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
@@ -17,12 +19,25 @@
             <a href="/storage.html">Хранилище</a>
             <a href="/subscription.html">Подписка</a>
             <a href="/login.html">Войти</a>
-            <a href="/logout.html">Выйти</a>
+            <a href="/logout">Выйти</a>
         </nav>
     </header>
 
     <main>
-        //
+        <div class="register-form">
+            <div class="title-container">
+                <h2 class="title">Зарегистрироваться</h2>
+            </div>
+
+            <form>
+                <input class="input" type="text" name="login" placeholder="Email">
+                <input class="input" type="text" name="login" placeholder="Логин">
+                <input class="input" type="password" name="password" placeholder="Пароль">
+                <input class="submit-button" type="submit" name="submit-button" value="Зарегистрироваться">
+            </form>
+
+            <a class="switch-to-login" href="/login.html">Уже есть аккаунт</a>
+        </div>
     </main>
 </body>
 </html>
