--- a/user/someuserid.html
+++ b/user/someuserid.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Админ панель | WaterCloud</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="main.css">
+    <title>Username | WaterCloud</title>
+    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../main.css">
 </head>
 <body>
     <header>
@@ -24,15 +24,14 @@
     </header>
 
     <main>
-        <div class="users">
-            <a class="user-link" href="/user/someuserid.html">Username</a>
-            <a class="user-link" href="/user/someuserid.html">Username</a>
-            <a class="user-link" href="/user/someuserid.html">Username</a>
-            <a class="user-link" href="/user/someuserid.html">Username</a>
+        <h2>Информация о пользователе #SOMEUNIQUEID</h2>
+        
+        <div class="user-info">
+            <h3>Username: USERNAME</h3>
+            <h3>Password: PASSWORD</h3>
         </div>
 
-        <h2 style="margin: 1rem">Upload</h2>
-        <!--UPLOAD MULTIPLE FILES NOT IMPLEMENTED YET-->
+        <a class="download-unique" href="/admin/download-unique?id=SOME_UNIQUE_USER_ID">Скачать уникальные ресурсы</a>
     </main>
 </body>
 </html>
