--- a/login.html
+++ b/login.html
@@ -30,13 +30,27 @@
             </div>
 
             <form>
-                <input class="input" type="text" name="login" placeholder="Логин">
-                <input class="input" type="password" name="password" placeholder="Пароль">
+                <input class="input input-login" type="text" name="login" placeholder="Логин">
+                <input class="input input-password" type="password" name="password" placeholder="Пароль">
                 <input class="submit-button" type="submit" name="submit-button" value="Войти">
             </form>
 
             <a class="switch-to-register" href="/register.html">Зарегистрироваться</a>
         </div>
     </main>
+
+    <script>
+        document.querySelector('.submit-button').addEventListener('click', (e) => {
+            e.preventDefault();
+
+            let login = document.querySelector('.input-login').value;
+            let password = document.querySelector('.input-password').value;
+
+            fetch('/api/auth/login', { method: 'post', body: JSON.stringify({
+                login: login,
+                password: password
+            })}).catch(console.error);
+        });
+    </script>
 </body>
 </html>
