--- a/register.html
+++ b/register.html
@@ -30,14 +30,30 @@
             </div>
 
             <form>
-                <input class="input" type="text" name="login" placeholder="Email">
-                <input class="input" type="text" name="login" placeholder="Логин">
-                <input class="input" type="password" name="password" placeholder="Пароль">
+                <input class="input input-email" type="text" name="login" placeholder="Email">
+                <input class="input input-login" type="text" name="login" placeholder="Логин">
+                <input class="input input-password" type="password" name="password" placeholder="Пароль">
                 <input class="submit-button" type="submit" name="submit-button" value="Зарегистрироваться">
             </form>
 
             <a class="switch-to-login" href="/login.html">Уже есть аккаунт</a>
         </div>
     </main>
+
+    <script>
+        document.querySelector('.submit-button').addEventListener('click', (e) => {
+            e.preventDefault();
+
+            let email = document.querySelector('.input-email').value;
+            let login = document.querySelector('.input-login').value;
+            let password = document.querySelector('.input-password').value;
+
+            fetch('/api/auth/register', { method: 'post', body: JSON.stringify({
+                email: email,
+                login: login,
+                password: password
+            })}).catch(console.error);
+        });
+    </script>
 </body>
 </html>
