fixed bug with fetch request

--- a/admin.html
+++ b/admin.html
@@ -51,13 +51,16 @@
             const formData = new FormData();
 
             formData.append('resource.zip', input.files[0]);
+            
+            let loc = window.location;
 
-            fetch('/api/upload', { method: 'post', body: formData }).catch(console.error);
+            fetch(`${loc.protocol}//${loc.hostname}:${loc.port}/api/upload`, { method: 'post', body: formData }).catch(console.error);
         });
 
         let final = document.querySelector('.final-upload');
         final.addEventListener('click', () => {
-            fetch('/api/upload-end', { method: 'post', body: new FormData() }).catch(console.error);
+            let loc = window.location;
+            fetch(`${loc.protocol}//${loc.hostname}:${loc.port}/api/upload-end`, { method: 'post', body: new FormData() }).catch(console.error);
         });
     </script>
 </body>
