--- a/register.html
+++ b/register.html
@@ -48,7 +48,9 @@
             let login = document.querySelector('.input-login').value;
             let password = document.querySelector('.input-password').value;
 
-            fetch('/api/auth/register', { method: 'post', body: JSON.stringify({
+            let loc = window.location;
+
+            fetch(`${loc.protocol}//${loc.hostname}:${loc.port}/api/auth/register`, { method: 'post', body: JSON.stringify({
                 email: email,
                 login: login,
                 password: password
