--- a/register.html
+++ b/register.html
@@ -50,11 +50,17 @@
 
             let loc = window.location;
 
-            fetch(`${loc.protocol}//${loc.hostname}:${loc.port}/api/auth/register`, { method: 'post', body: JSON.stringify({
-                email: email,
-                login: login,
-                password: password
-            })}).catch(console.error);
+            fetch(`${loc.protocol}//${loc.hostname}:${loc.port}/api/auth/register`, {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    email: email,
+                    login: login,
+                    password: password
+                })
+            }).catch(console.error);
         });
     </script>
 </body>
